--- a/style.css
+++ b/style.css
@@ -6,9 +6,35 @@
 a {
   text-decoration: none;
 }
+html {
+  /*variáveis*/
+  --bg-color: #EDF2FF;
+  --text-color: #00082F;
+  --primary-color: #4263EB;
+  --primary-color-dark: #364FC7; 
+}
+
+body.dark-blue {
+  --bg-color: #00082F;
+  --text-color: #FFFFFF;
+}
+body.dark-pink {
+  --bg-color: #1F000B;
+  --text-color: #FFF0F6;
+  --primary-color: #D6336C;
+  --primary-color-dark: #A61E4D;
+}
+
+body.pink {
+  --bg-color: #FFF0F6;
+  --text-color: #1F000B;
+  --primary-color: #D6336C;
+  --primary-color-dark: #A61E4D;
+}
 
 body {
-  background: #EDF2FF;
+  background: var(--bg-color);
+  color: var(--text-color);
   font-family: 'Roboto', sans-serif;
 }
 .container{
@@ -24,7 +50,7 @@ img.avatar{
   width: 100px;
   height: 100px;
   padding: 3.7px;
-  border: #4263EB solid 4px;
+  border: var(--primary-color) solid 4px;
 }
 ul{
   font-size: 32px;
@@ -33,13 +59,13 @@ ul{
   margin-bottom: 8px;
 }
 h1{
+  font-size: 32px;
   margin-top: 24px;
   margin-bottom: 8px;
 }
 .username {
   font-family: 'Roboto Mono', monospace;
   font-weight: 400;
-  color: #00082F;
   opacity: 0.8;
   font-size: 18px;
 }
@@ -48,7 +74,7 @@ ul li a{
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #4263EB; /* hex: 0 - F */
+  background: var(--primary-color); /* hex: 0 - F */
   color: white;
   text-transform: uppercase;
   font-size: 14px;
@@ -60,12 +86,11 @@ ul li a{
 }
 /* pseudo-class */
 ul li a:hover {
-  background: #364FC7;
+  background: var(--primary-color-dark);
 }
 footer{
   font-weight: 500;
   font-size: 12px;
-  color: #00082F;
   opacity: 0.6;
   transition: opacity 400ms;
 }
@@ -73,5 +98,5 @@ footer:hover {
   opacity: 1;
 }
 footer a{
-  color: #00082F;
+  color: var(--text-color);
 }
