--- a/style.css
+++ b/style.css
@@ -6,24 +6,24 @@
 a {
   text-decoration: none;
 }
-html {
+/* html { */
   /*variáveis*/
-  --bg-color: #EDF2FF;
+  /* --bg-color: #EDF2FF;
   --text-color: #00082F;
   --primary-color: #4263EB;
   --primary-color-dark: #364FC7; 
-}
+} */
 
-body.dark-blue {
+/* body.dark-blue {
   --bg-color: #00082F;
   --text-color: #FFFFFF;
-}
-body.dark-pink {
+} */
+/* body.dark-pink {
   --bg-color: #1F000B;
   --text-color: #FFF0F6;
   --primary-color: #D6336C;
   --primary-color-dark: #A61E4D;
-}
+} */
 
 body.pink {
   --bg-color: #FFF0F6;
@@ -42,6 +42,54 @@ body {
   width: 300px;
   margin: 60px auto;
 }
+/* toggle */
+
+input[type=checkbox]{
+  height: 0;
+  width: 0;
+  visibility: hidden;
+}
+
+label {
+  cursor: pointer;
+  text-indent: -9999px;
+  width: 52px;
+  height: 27px;
+  background: lightgrey;
+  float: right;
+  border-radius: 100px;
+  position: relative;
+  border: 1px solid lightgrey;
+  
+}
+
+label::after{
+  content: '';
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  width: 20px;
+  height: 20px;
+  background-color: white;
+  border-radius: 90px;
+  transition: 0.3s;
+}
+
+input:checked + label {
+  background-color: var(--bg-color);
+
+}
+
+input:checked + label::after {
+  left: calc(100% - 5px);
+  transform: translateX(-100%);
+}
+
+label:active:after {
+  width: 45px;
+}
+/* fim toggle */
+
 img{
   width: 100%;
 }
@@ -51,12 +99,6 @@ img.avatar{
   height: 100px;
   padding: 3.7px;
   border: var(--primary-color) solid 4px;
-}
-ul{
-  font-size: 32px;
-  color: #00082F;
-  margin-top: 24px;
-  margin-bottom: 8px;
 }
 h1{
   font-size: 32px;
@@ -68,6 +110,10 @@ h1{
   font-weight: 400;
   opacity: 0.8;
   font-size: 18px;
+}
+ul{
+  list-style: none;
+  margin: 48px 0;
 }
 ul li a{
   height: 53px;
